# OpenGL_Basics

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/GLAD/: CMakeLists.txt
lib/GLAD/include/glad/: glad.h
lib/GLAD/src/: glad.c
res/shaders/: shader.fs  shader.vs
src/: main.cpp
src/GFX/: application.cpp  application.h  buffer.cpp  buffer.h  error_handling.cpp  error_handling.h  game.cpp  game.h  gfx.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.h  vao.cpp  vao.h  window.cpp  window.h
src/graphics/: application.cpp  application.h  buffer.cpp  buffer.h  error_handling.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  window.cpp
src/util/: error_handling.cpp  error_handling.h  file_handling.cpp  file_handling.h  path_helper.cpp  path_helper.h
